Tweaks to (attempt to) update the old SPIR-V external.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,63 +12,35 @@ set(SRC
 	vkpipeline/default.c
 	vkshader/test.c
 	vkshader/default.c
+	vkshader/mcopy-idshift.c
 )
 set(HEADS
 	libvivacious.h
 )
-set(LUA
-	vkshader/mcopy-idshift.lua
-)
-set(LUAH
-	vkshader/sections.lua
-)
 
 gen(GENERATOR vulkan/libdl OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/?.c SPECS vulkan)
 
-set(FULLSRC ${SRC})
-foreach(L ${LUA})
-	string(REPLACE ".lua" ".c" O ${L})
-	get_filename_component(DIR ${L} DIRECTORY)
-	file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR})
-	add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${O}
-		COMMAND ${LUA_EXECUTABLE} ${L} ${CMAKE_CURRENT_BINARY_DIR}/${O}
-			${CMAKE_SOURCE_DIR}/include
-		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-		MAIN_DEPENDENCY ${L}
-		DEPENDS ${LDEPS})
-	set(FULLSRC ${FULLSRC} ${CMAKE_CURRENT_BINARY_DIR}/${O})
-endforeach()
-
-foreach(L ${LUAH})
-	string(REPLACE ".lua" ".h" O ${L})
-	get_filename_component(DIR ${L} DIRECTORY)
-	file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR})
-	add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${O}
-		COMMAND ${LUA_EXECUTABLE} ${L} ${CMAKE_CURRENT_BINARY_DIR}/${O}
-			${CMAKE_SOURCE_DIR}/include
-		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-		MAIN_DEPENDENCY ${L})
-	set(FULLSRC ${FULLSRC} ${CMAKE_CURRENT_BINARY_DIR}/${O})
-endforeach()
-
-set(OHEADS)
-foreach(H ${HEADS})
-	set(OHEADS ${OHEADS} ${CMAKE_BINARY_DIR}/include/${H})
-endforeach()
-add_custom_command(OUTPUT ${OHEADS}
-	COMMAND ${CMAKE_COMMAND} -E copy ${HEADS} ${CMAKE_BINARY_DIR}/include
-	DEPENDS ${HEADS}
-	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vkshader)
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/vkshader/mcopy-idshift.c
+	COMMAND ${LUA_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/vkshader/mcopy-idshift.c.lua
+		${CMAKE_SOURCE_DIR}/external
+	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vkshader
+	MAIN_DEPENDENCY vkshader/mcopy-idshift.c.lua)
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/vkshader/sections.h
+	COMMAND ${LUA_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/vkshader/sections.h.lua
+		${CMAKE_SOURCE_DIR}/external
+	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vkshader
+	MAIN_DEPENDENCY vkshader/sections.h.lua)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}
 	${CMAKE_SOURCE_DIR}/external/spirv/include)
 
-add_library(vivacious SHARED ${GEN_OUTS}) #${FULLSRC})
-add_library(vivacious-static STATIC EXCLUDE_FROM_ALL ${FULLSRC})
+add_library(vivacious SHARED ${SRC} ${GEN_OUTS})
+add_library(vivacious-static STATIC EXCLUDE_FROM_ALL ${SRC} ${GEN_OUTS})
 
-add_custom_target(src-lua DEPENDS ${LUA})
-add_dependencies(vivacious src-lua)
-add_dependencies(vivacious-static src-lua)
+#add_custom_target(src-lua DEPENDS ${LUA})
+#add_dependencies(vivacious src-lua)
+#add_dependencies(vivacious-static src-lua)
 
 if((UNIX AND NOT APPLE) OR CYGWIN)
 	target_link_libraries(vivacious dl)
