Rewrite some parts of the testing-docs generator to make C headers.

--- a/apis/CMakeLists.txt
+++ b/apis/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(OUT ${CMAKE_BINARY_DIR}/include/vivacious)
 
-gen(USE btest OUTDIR ${CMAKE_BINARY_DIR}/include/vivacious SUFFIX .md
+gen(USE headerc OUTDIR ${CMAKE_BINARY_DIR}/include/vivacious SUFFIX .h
 	SPECS vulkan vkinitializer)
 add_custom_target(include DEPENDS ${GEN_OUTS})
