--- a/apis/CMakeLists.txt
+++ b/apis/CMakeLists.txt
@@ -1,5 +1,9 @@
 set(OUT ${CMAKE_BINARY_DIR}/include/vivacious)
 
 gen(USE headerc OUTDIR ${CMAKE_BINARY_DIR}/include/vivacious SUFFIX .h
-	SPECS vulkan vkinitializer)
-add_custom_target(include DEPENDS ${GEN_OUTS})
+	SPECS vulkan vkinitializer
+	TARGET include)
+
+gen(USE docsmd OUTDIR ${CMAKE_BINARY_DIR}/docs SUFFIX .md
+	SPECS vulkan vkinitializer
+	TARGET docs)
