Tinkering and cleaning. Now includes a header compile test.

--- a/apis/CMakeLists.txt
+++ b/apis/CMakeLists.txt
@@ -1,5 +1,3 @@
-set(OUT ${CMAKE_BINARY_DIR}/include/vivacious)
-
 gen(USE headerc OUTDIR ${CMAKE_BINARY_DIR}/include/vivacious SUFFIX .h
 	SPECS vulkan vkinitializer
 	TARGET include)
@@ -7,3 +5,7 @@ gen(USE headerc OUTDIR ${CMAKE_BINARY_DIR}/include/vivacious SUFFIX .h
 gen(USE docsmd OUTDIR ${CMAKE_BINARY_DIR}/docs SUFFIX .md
 	SPECS vulkan vkinitializer
 	TARGET docs)
+
+include_directories(${CMAKE_BINARY_DIR}/include)
+add_definitions("-ferror-limit=1000")
+add_executable(inctest test.c)
