Completed the refactor of the libdl implementation of Vk.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ add_definitions(-DVv_VERSION_MAJOR=0 -DVv_VERSION_MINOR=1 -DVv_VERSION_PATCH=2)
 # Generation helper function
 function(gen)
 	cmake_parse_arguments(PARSE_ARGV 0 A
-		""
+		"ALL"
 		"USE;OUTDIR;SUFFIX;TARGET"
 		"DEPENDS;SPECS")
 	if(A_OUTDIR)
@@ -69,7 +69,7 @@ function(gen)
 	else()
 		set(A_OUTDIR ${CMAKE_CURRENT_BINARY_DIR})
 	endif()
-	set(GN ${CMAKE_SOURCE_DIR}/apis/core/${A_USE}.lua)
+	set(GN ${CMAKE_CURRENT_SOURCE_DIR}/${A_USE}.lua)
 	set(SL ${CMAKE_SOURCE_DIR}/apis/core/generation.lua ${GN})
 	foreach(S ${A_SPECS})
 		set(S_OUT ${A_OUTDIR}/${S}${A_SUFFIX})
@@ -91,7 +91,12 @@ function(gen)
 		set(MYOUTS ${MYOUTS} ${S_OUT})
 	endforeach()
 	if(A_TARGET)
-		add_custom_target(${A_TARGET} DEPENDS ${MYOUTS})
+		if(A_ALL)
+			set(A_ALL ALL)
+		else()
+			set(A_ALL "")
+		endif()
+		add_custom_target(${A_TARGET} ${A_ALL} DEPENDS ${MYOUTS})
 	endif()
 	set(GEN_OUTS ${GEN_OUTS} ${MYOUTS} PARENT_SCOPE)
 	set(GEN_SPECS ${GEN_SPECS} ${A_SPECS} PARENT_SCOPE)
