Use hand-written master headers, for now.

--- a/apis/CMakeLists.txt
+++ b/apis/CMakeLists.txt
@@ -1,4 +1,4 @@
-gen(USE core/linter SUFFIX .lint SPECS vulkan vkinitializer TARGET lint ALL)
+configure_file(vivacious.h ${CMAKE_BINARY_DIR}/include/vivacious/vivacious.h)
 
 gen(USE core/headerc OUTDIR ${CMAKE_BINARY_DIR}/include/vivacious SUFFIX .h
 	SPECS vulkan vkinitializer
