--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "external/slaxml"]
 	path = external/slaxml
 	url = https://github.com/Phrogz/SLAXML.git
+[submodule "external/lua"]
+	path = external/lua
+	url = https://github.com/lua/lua.git
