Fix up the shaders, to make it work nicer

--- a/tup.config
+++ b/tup.config
@@ -30,6 +30,5 @@
 #CONFIG_RUN_WRAPPER=valgrind
 
 # Uncomment this to recompile shaders in applicable areas (for instance, demos).
-# This *will* cause errors relating to the copies present in the normal tree,
-# those will need to be deleted (*.spv) in order to proceed.
+# Requires a working glslangValidator on the PATH.
 #CONFIG_RECOMPILE_SHADERS=y
